--- a/static/css/register.css
+++ b/static/css/register.css
@@ -62,7 +62,7 @@ a:hover {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background-image: url('../image/bg-01.jpg');
+    background-image: url('../image/dut2.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
