--- a/static/css/sign.css
+++ b/static/css/sign.css
@@ -196,7 +196,7 @@ iframe {
     justify-content: center;
     align-items: center;
     padding: 15px;
-    background-image: url("../image/bg-01.jpg");
+    background-image: url("../image/dut2.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
