--- a/template/Settlement.html
+++ b/template/Settlement.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>账单结算</title>
+    <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js" type="text/javascript"></script>
     <script src="../static/js/jquery.min.js"></script>
+    <link href="../static/css/style.css" rel='stylesheet' type='text/css' media="all"/>
     <script type="text/javascript" src="../static/js/move-top.js"></script>
     <script type="text/javascript" src="../static/js/easing.js"></script>
     <script type="text/javascript" src="../static/js/Plus.js"></script>
@@ -37,16 +39,23 @@
 
 </head>
 <body onload="Get_OrderList()">
-    <div>
-        <label>
-            <p>您的订单是</p>
+
+    <div class="add-products">
+    <div class="container">   
+        <div class="navbar-header w3l_logo" style="margin-left: 300px" >  
+            <h1 ><a href="home.html"><img src="../static/image/logo.png" style="height:100px;width: 100px;" alt=""/><span style="margin-left: -980px;color: #000">Best Food Collection</span></a></h1>
+            
+        </div>
+        <div style="margin-left: 500px;margin-top: 0px;">
+        <p>您的订单是</p>
             <span id="Order"></span>
-            <span></span>
-            <p></p>
-            <span>本次订单总价格是：</span>
+        </div>
+
+        <table align:"center" style="margin:0 auto;width:500px">
+           <caption style="font-size: 20px;color:#000"><span>应付款:</span>
             <span id="OrderList"></span>
             <span>元</span>
-        </label>
+            </caption>
             <script>
              var text = window.location.search;
             var param = text.split("?");
@@ -56,14 +65,27 @@
             $("#Order").text(Order);
             $("#OrderList").text(price);
             </script>
-        <p>微信支付二维码如下：</p>
-        <a href="#"><img src="../static/image/menu/WeChat1.jpg" title="name" /></a>
-        <p>支付宝支付二维码如下：</p>
-        <a href="#"><img src="../static/image/menu/Zhifubao1.jpg" title="name" /></a>
+            <tr>
+            <th>微信支付</th>
+            <th>支付宝支付</th>
+            </tr>
+            <tr>
+            <td><img src="../static/image/menu/WeChat1.jpg" title="name" style="height: 200px;width: 200px"/></td>
+            <td><img src="../static/image/menu/Zhifubao1.jpg" title="name" style="height: 200px;width: 200px"/>
+            </td>
+            </tr>
+        </table>        
     </div>
-    <div>
-        <button type="button" onclick=" GetWaitingNum()">支付成功</button>
-        <button type="button " onclick="abondon()">放弃支付</button>
+    <div class="clearfix"> </div>
+    <div align="center">
+        <a href="#"><button class="settlement" type="button" onclick="GetWaitingNum()">支付成功</button></a>
+        <a href="news.html"><button class="settlement" type="button " onclick="abondon()">取消支付</button></a>
     </div>
+    </div>
+<div class="copyw3-agile">
+    <div class="container">
+        <p>Copyright &copy; 2019.小学期<a href="#" target="_blank" title="美味无穷">美味无穷</a></p>
+    </div>
+</div>
 </body>
 </html>
