--- a/template/Settlement.html
+++ b/template/Settlement.html
@@ -79,7 +79,7 @@
     <div class="clearfix"> </div>
     <div align="center">
         <a href="#"><button class="settlement" type="button" onclick="GetWaitingNum()">支付成功</button></a>
-        <a href="news.html"><button class="settlement" type="button " onclick="abondon()">取消支付</button></a>
+        <a href="#"><button class="settlement" type="button " onclick="abandon1()">取消支付</button></a>
     </div>
     </div>
 <div class="copyw3-agile">
