--- a/template/sign.html
+++ b/template/sign.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>登录-风格转换</title>
+    <title>登录</title>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
 
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="flex-col-c p-t-25">
-                    <a href="register.html" class="txt2">立即注册</a>
+                    <a href="../register" class="txt2">立即注册</a>
                 </div>
             </form>
         </div>
