--- a/template/comment.html
+++ b/template/comment.html
@@ -3,6 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>用餐评价</title>
+     <style type="text/css" media="screen">
+        body { padding: 20px; font-size: 0.85em; font-family: georgia, serif; }
+        .btn { display: block; position: relative; background: #aaa; padding: 5px; float: left; color: #fff; text-decoration: none; cursor: pointer; }
+        .btn * { font-style: normal; background-image: url(btn2.png); background-repeat: no-repeat; display: block; position: relative; }
+        .btn i { background-position: top left; position: absolute; margin-bottom: -5px;  top: 0; left: 0; width: 5px; height: 5px; }
+        .btn span { background-position: bottom left; left: -5px; padding: 0 0 5px 10px; margin-bottom: -5px; }
+        .btn span i { background-position: bottom right; margin-bottom: 0; position: absolute; left: 100%; width: 10px; height: 100%; top: 0; }
+        .btn span span { background-position: top right; position: absolute; right: -10px; margin-left: 10px; top: -5px; height: 0; }
+        * html .btn span,
+        * html .btn i { float: left; width: auto; background-image: none; cursor: pointer; }
+        .btn.blue { background: #2ae; }
+        .btn.green { background: #9d4; }
+        .btn.pink { background: #e1a; }
+        .btn:hover { background-color: #a00; }
+        .btn:active { background-color: #444; }
+        .btn[class] {  background-image: url(shade.png); background-position: bottom; }
+        * html .btn { border: 3px double #aaa; }
+        * html .btn.blue { border-color: #2ae; }
+        * html .btn.green { border-color: #9d4; }
+        * html .btn.pink { border-color: #e1a; }
+        * html .btn:hover { border-color: #a00; }
+        p { clear: both; padding-bottom: 2em; }
+        form { margin-top: 2em; }
+        form p .btn { margin-right: 1em; }
+        textarea { margin: 1em 0;}
+    </style>
     <script src="../static/js/jquery.min.js"></script>
     <script src="../static/js/jquery-3.0.0.min.js"></script>
     <script src="../static/js/jquery.params.js"></script>
@@ -11,16 +37,12 @@
  var dict = [];
  var userID;
     function sasaki() {
-    alert(dict);
-    alert("Now is submitting!");
  var comdata =[userID];
- alert(dict);
  for (var i=0;i<dict.length;i++)
  {
      comdata.push(dict[i]);
      comdata.push($("#input"+dict[i]).val());}
 
-    alert("Waiting...");
     $.ajax({
         url:"http://127.0.0.1:8000/getCommentFromCus/",
         traditional:true,
@@ -39,36 +61,26 @@
             alert(data);
         }
     });
-    alert("!!!!!!!!!!!!!!!!!!!!!!");
 
 }
          $(function() {
-             alert("Start!");
-             alert("Here!");
              var text = window.location.search;
              var param = text.split("?");
              userID = decodeURIComponent(param[1].split("=")[1]);
              var orderAbbre = decodeURIComponent(param[2].split("=")[1]);
 
-             alert("orderAbbre" + orderAbbre);
              {#var orderNum=string.split(',')[0];#}
              var temp = orderAbbre.split(',');
              {#alert(orderNum)#}
-             alert(orderAbbre.length);
 
              for (var i = 0; i < (orderAbbre.length) / 3 - 1; i++) {
                  orderNum = temp[i].split("_")[0];
                  dict.push(orderNum);
              }
-             alert(dict);
 
              var comNum = 0;
-             var src1 = "";
-             var src2 = "";
-             var src3 = "";
-             var name1 = "";
-             var name2 = "";
-             var name3 = "";
+             var src = [];
+             var name =[];
 
              /////
              {#for (var i = 0; i < 2; i++)#}
@@ -81,7 +93,13 @@
              {#    document.getElementById('table').appendChild(tr);}#}
              ////
              comNum = dict.length;
-             alert("comNum" + comNum);
+
+             for(var i=0; i<comNum; i++){
+                src[i] = "../static/image/d" + dict[i] + ".jpg";
+            }
+            name[0] = "红烧肉";
+            name[1] = "日本料理";
+            name[2] = "重庆小面";
              {#if(d1 > 0){#}
              {#    //comNum++;#}
              {#    src1 = "C:/Users/Neil/Desktop/大三下/小学期/dlut-order/image/menu/d1.jpg";#}
@@ -98,28 +116,28 @@
              var tableData = "";
              for(var i = 0;i <comNum;i++)
              {
-                 tableData += "<tr>" + "<td>" +
-                     "<img src='src" + i + "' name='name" + i +"'>" + "</td>" + "</tr>";
-                 tableData += "<tr>" + "<td>" + "" + "</td>" + "<td>" +
-                     "<textarea id='input" +dict[i] + "' placeholder='请输入' cols='80' rows='8'></textarea>" + "</td>" + "<td>" + "</td>" + "</tr>";}
+                 var I = parseInt(dict[i])-1;
+                tableData += "<tr>" + "<td align='right'>" +
+                    "<img src=" + src[I] + " title="+ name[I] + " align='center'style=\"height: 200px;width:190px \"</image>\n" +
+                    "</body>" + "</td>" ;
+                tableData +=  "<td>" + "" + "</td>" + "<td>" +
+                    "<textarea id='input" + dict[i] + "' placeholder='请输入' cols='80' rows='13'></textarea>" + "</td>" + "<td>" + "</td>" + "</tr>";
+            }
 
              tableData += "<tr>" + "<td>" +
-                 "<button id='btn' onclick='sasaki()'>提交</button>" + "</td>" + "</tr>";
+                 "<button id='btn' onclick='sasaki()' class='btn blue big'>提交</button>" + "</td>" + "</tr>";
              tableData += "";
 
              $("#himawari").html(tableData);
-             alert("There!");
          });
 
     </script>
 </head>
 <body>
 
-<h3>欢迎留下您的宝贵评价！</h3>
-    <table>
+<h3 align="center">欢迎留下您的宝贵评价！</h3>
+    <table align="center">
         <tbody id="himawari"></tbody>
     </table>
 
-
-</body>
 </html>
